syntax = "proto3";

package api.v1;
option go_package = "github.com/intelops/compage/gen/api/v1;project";

service ProjectService {
  rpc GenerateCode (GenerateCodeRequest) returns (stream GenerateCodeResponse) {}
  rpc RegenerateCode (GenerateCodeRequest) returns (stream GenerateCodeResponse) {}
}

message GenerateCodeRequest {
  string projectVersion = 1;
  string projectName = 2;
  string projectJSON = 3;
  string gitRepositoryName = 4;
  string gitPlatformName = 5;
  string gitPlatformURL = 6;
  string gitPlatformUserName = 7;
  string projectMetadata = 8;
}

message GenerateCodeResponse{
  bytes fileChunk = 1;
}